# TRCustoms

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.staging.override.yml  docker-compose.staging.yml  docker-compose.yml  justfile  pyproject.toml  setup.cfg
.github/workflows/: deploy-prod.yaml  deploy-staging.yaml  deploy.yaml
backend/: manage.py
backend/trcustoms/: __init__.py  admin.py  app.py  asgi.py  authentication.py  cache.py  celery.py  conftest.py  mails.py  markdown.py  middleware.py  mixins.py  pagination.py  permissions.py  ratings.py  scoring.py  settings.py  signals.py  snapshots.py  storage.py  throttling.py  trle_scraper.py  urls.py  utils.py  validators.py  wsgi.py
backend/trcustoms/audit_logs/: admin.py  apps.py  consts.py  mixins.py  models.py  registry.py  serializers.py  utils.py  views.py
frontend/: .prettierrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  api.tsx  forms.css  index.css  index.tsx  main.tsx  math.tsx  themes.css  types.tsx  utils.tsx
services/backend/: Dockerfile  entrypoint.sh  requirements.dev.txt  requirements.txt
services/frontend/: Dockerfile  entrypoint.sh
services/nginx/: Dockerfile_prod  nginx_dev.conf  nginx_dev.conf.template  nginx_prerender_map.conf  nginx_prerender_server.conf  nginx_prod.conf  nginx_prod.conf.template
services/prerender/: Dockerfile  package.json  server.js
services/uwsgi/: mime.types  uwsgi.ini
(+1497 files in other folders)
