[metadata]
name = trcustoms
version = 1.0
url = https://github.com/rr-/trcustoms
author = "rr-"
author_email = dash@wind.garden
description = "Custom levels for classic Tomb Raider games"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
classifiers =
    Environment :: Other Environment
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Text Processing
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    Django
    celery
    uwsgi
python_requires = >=3.9
package_dir = trcustoms=trcustoms
packages = find:

[options.extras_require]
test =
    pytest
    pytest-cov
    black
